--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h3 class="text-center my-4"> Jira Time Reorting</h3>
+				<h3 class="text-center my-4"> Jira Time Reporting</h3>
 				<form id="searchForm" class="my-4">
 					<!-- form group -->
 					<div class="form-group my-3">
@@ -58,7 +58,7 @@
 					<div class="row">
 						<div class="mx-auto">
 							<button id="CreateReport" type="button" class="btn redBtn text-capitalize px-auto">Create Report</button>
-						    <button id="export" type="button" class="btn redBtn text-capitalize px-auto">Export</button>
+						    <a id="export" type="button" class="btn redBtn text-capitalize px-auto">Export</a>
 
 						</div>
 					</div>
