providing proxy on host 127.0.0.1 and port 5000 by package cors-anywhere

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </tr>
             </thead>
             <tbody id="tbody"></tbody>
-            <tfoot></tfoot>
+            <tfoot id="tfoot"></tfoot>
           </table>
         </div>
       </div>
